# df-fix

./: .dockerignore  .env.template  .gitignore  CMakeLists.txt  Dockerfile  df-fix.code-workspace  docker-compose.yml  package.json  test-api.http
.claude/: settings.json
.helm/app/: Chart.yaml  README.md  values.yaml
.helm/app/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  external-services.yaml  imagepullsecret.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.helm/argocd/: Chart.yaml  README.md  values.yaml
bindings/wasm/: fixbind.cpp
include/: Bearing.h  DfLocation.h  DfSite.h  Direction.h  DirectionCollection.h  DirectionCross.h  DirectionCrossCollection.h  GeoLocation.h  LikelihoodTool.h  Logger.h  fixlib.h  geolib.h
public/: index.html
src/: Bearing.cpp  DfLocation.cpp  DfSite.cpp  Direction.cpp  DirectionCollection.cpp  DirectionCross.cpp  DirectionCrossCollection.cpp  GeoLocation.cpp  LikelihoodTool.cpp  Logger.cpp  fixlib.cpp  geolib.cpp  main.cpp
test/: fixtest.cpp
wrappers/javascript/: .npmignore  README.md  build.sh  index.js  likelihood-worker.js  package-lock.json  server.js  tsconfig.node.json  webpack.config.js
wrappers/javascript/doc/: FixEstimation.css  README.txt
wrappers/javascript/lib/: README.txt  fix.js  libgeofix_javascript.js
wrappers/javascript/package/: .gitignore  buildinfo.json  dockerfile  index.d.ts  likelihood-worker.js  package.json  webpack.config.js
wrappers/javascript/package/.scripts/: postinstall.js  preinstall.js  publish.js
wrappers/javascript/package/doc/: index.html
wrappers/javascript/package/lib/: libgeofix_javascript.js
wrappers/javascript/package/publish/: geofix.min.js  geofix.min.js.map  package.json  test.js
wrappers/javascript/package/src/: geofix.js  index.html  index.js  lib.ts  libgeo.js  packagetest.html
wrappers/javascript/package/src/elements/: GlobeMapHTMLElement.js
wrappers/javascript/package/src/entities/: Direction.ts
wrappers/javascript/package/test/: geofix.test.js  run.js
wrappers/javascript/src/: geofix.js  index.html  packagetest.js
wrappers/javascript/src/elements/: LikelihoodMap.js
wrappers/javascript/src/entities/: Bearing.ts  Cross.ts  GeoLocation.ts  Latitude.ts  Longitude.ts  Site.ts  test.ts
wrappers/nodejs/: binding_node.gyp  binding_rocky8.gyp  binding_win.gyp  geofix.cpp  geofix.h  geofixbind.cpp  package.json
wrappers/python/: CMakeLists.txt  CMakeListsLin.txt  CMakeListsWin.txt  geofixbind.cpp
wrappers/python/package/: changelog.txt  setup.py
wrappers/python/package/src/geofix/: __init__.py  __main__.py
wrappers/python/package/test/: run.py  test_geofix.py
wrappers/python/server/: server.py
wrappers/python/server/restapi/: api.http
wrappers/python/server/templates/: index.html
wrappers/wasm/: CMakeLists.txt
